# design_patterns_class

./: .clang-format  README
final/: finalDesign.h
hw/: CMakeLists.txt  README  macros.h  main.cpp
hw/final/: .clang-format  CMakeLists.txt  finalDesign.h  orders_to_struct.py  tests.cpp
hw/final/original_design/: design1Base.out  formal_specs.txt  informal_specs.txt  orders_1.input  original1Dtor.out  original_output-instrumented.txt
hw/problem/: abstractFactory.h  adapter.h  bridge.h  chainOfResp.h  decorator.h  decoratorCommon.h  factoryMethod.h  observer.h  templateMethod.h
hw/solution/: abstractFactory.h  adapter.h  bridge.h  chainOfResp.h  decorator.h  factoryMethod.h  observer.h  strategy.h  templateMethod.h
hw1/: CMakeLists.txt  macros.h  main.cpp
hw1/problem/: factoryMethod.h  strategy.h
hw1/solution/: strategy.h
